<resources>
    <string name="app_name">QuizApp</string>
    <string name="answer_10_questions">Answer these questions and learn how much you know about Android! Here we go!</string>
    <string name="the_quiz_contains">The quiz contains open questions as well as single and multiple choice answers</string>
    <string name="the_result_you_will_post">The result you will be able to post on social networking sites or send in private messages.</string>
    <string name="before_start">Before start the quiz, please fill out the form below. These data will be used to generate the final message.</string>
    <string name="hint_name">Name</string>
    <string name="start_button_txt">START</string>
    <string name="mascots_green_guys">x a b r d h c a</string>
    <string name="welcome_slogan">Welcome to ANDROID QUIZ APP!</string>
    <string name="question_1">Question 1: Which unit should we use to resize the text?</string>
    <string name="dp">dp</string>
    <string name="sp">sp</string>
    <string name="px">px</string>
    <string name="dpi">dpi</string>
    <string name="question_2">Question 2: Which of the following variables can be use for store a numeric value: 2.33</string>
    <string name="float_answer">float</string>
    <string name="double_answer">double</string>
    <string name="string_answer">String</string>
    <string name="boolean_answer">Double</string>
    <string name="question_3">Question 3: What view will allow you to scroll screen content?</string>
    <string name="put_your_answer_here">Put your answer here</string>
    <string name="question_4">Question 4: Which of following views are view groups?</string>
    <string name="linearlayout_answer">LinearLayout</string>
    <string name="relativelayout_answer">RelativeLayout</string>
    <string name="textview_answer">TextView</string>
    <string name="numberview_answer">NumberView</string>
    <string name="question_5">Question 5: What method do you use for checking if checkbox is marked?</string>
    <string name="ismarked_answer_option">isMarked()</string>
    <string name="ischecked_answer_option">isChecked()</string>
    <string name="ischecket_answer_option">isChecket()</string>
    <string name="istrue_answer_option">isTrue()</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="question_6">Question 6: Can we simulate SD card in Android?</string>
    <string name="no_only_physical_device_can_be_used">No, only physical device can be used</string>
    <string name="avd_has_sd_card_by_default">AVD has SD card by default</string>
    <string name="check_sd_card_option_and_specify_memory_for_the_same">Check SD Card Option and specify memory for the same</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="question_7">Qustion 7: How can we use custom colors in application?</string>
    <string name="it_is_not_possible">It is not possible</string>
    <string name="use_layout_file_and_specify_color_value">Use layout file and specify color value</string>
    <string name="use_xml_file_and_specify_color_value">Use XML file and specify color value</string>
    <string name="use_java_file">Use Java file</string>
    <string name="question_8">Qustion 8: How can we bring up a pop up a menu?</string>
    <string name="question_9">Qustion 9: Why are intent filters written?</string>
    <string name="to_find_a_suitable_component">To find a suitable component</string>
    <string name="it_will_call_a_service">It will call a service</string>
    <string name="in_dynamic_broadcast_receiver">In dynamic broadcast receiver</string>
    <string name="it_will_always_start_a_new_task">It will always start a new task</string>
    <string name="question_10">Qustion 10: How can a thread in Android be stopped?</string>
    <string name="stop">stop()</string>
    <string name="wait">wait()</string>
    <string name="suspend">suspend()</string>
    <string name="return_from_run_on_boolean_flag_false">return from run() on boolean flag=false</string>
    <string name="check_answers">Check Answers</string>
    <string name="udacity_quiz_project">Udacity Quiz Projects</string>Udacity Quiz Project
</resources>