<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".MainActivity"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_page"

            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/twofiftydp"
                android:scaleType="centerCrop"
                android:src="@drawable/main_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/onedp"
                android:background="@android:color/black">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/thirtydp"
                android:layout_marginVertical="@dimen/tendp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/welcome_slogan"
                    android:textSize="@dimen/size_of_welcome_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/vertical_margin"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/scoreSection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/vertical_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="@dimen/hundereddp"
                            android:layout_height="@dimen/hundereddp"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/twentydp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/udacity_logo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/twentydp"
                            android:text="Udacity Quiz Project"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_width"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@android:color/darker_gray">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/StyleForDescriptionTextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/tendp"
                        android:drawableLeft="@drawable/binary_numbers_128"
                        android:text="@string/answer_10_questions" />

                    <TextView
                        style="@style/StyleForDescriptionTextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/tendp"
                        android:drawableLeft="@drawable/list"
                        android:text="@string/the_quiz_contains" />

                    <TextView
                        style="@style/StyleForDescriptionTextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/trophy_64"
                        android:text="@string/the_result_you_will_post" />

                    <TextView
                        style="@style/StyleForDescriptionTextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/tendp"
                        android:drawableLeft="@drawable/flag_64"
                        android:text="@string/before_start" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_width"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:background="@android:color/darker_gray">

                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:text="@string/enter_your_name"
                    android:textSize="@dimen/twentysp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginBottom="@dimen/tendp"
            android:layout_marginHorizontal="@dimen/twentydp"

            android:layout_below="@id/main_page"
            android:backgroundTint="@color/startButtonColor"
            android:text="@string/start_button_txt"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>